--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -46,3 +46,9 @@
     width: 140px;
     height: 50px;
 }
+
+/* Styles for the h2 element */
+.clickable-h2 {
+    cursor: pointer; /* Change cursor to pointer to indicate it's clickable */
+    transition: text-decoration 0.3s ease; /* Smooth transition for the underline effect */
+}
